# openwrt

./: .config  .config.old  .gitmodules  ZBT-Z8102AX-NAND.config  key-build  key-build.pub  key-build.ucert  key-build.ucert.revoke  large_files.txt  rules.mk  test_metadata.pm
autobuild/: lede-build-sanity.sh
build_dir/host/gengetopt-2.23/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  acinclude.m4  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool
build_dir/host/gengetopt-2.23/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
build_dir/host/gengetopt-2.23/build-aux/: config.sub  mdate-sh  test-driver
build_dir/host/gengetopt-2.23/doc/: Makefile  Makefile.am  Makefile.in  README.example  cmdline1.c  cmdline1.h  cmdline1.h.texi  cmdline2.c  cmdline2.h  gengetopt.1  gengetopt.html  gengetopt.info  gengetopt.texi  help_output.texi  index.html  index.info  index.texi  main1.cc.texi  multiple_example.c.texi  sample1.output.texi  sample1_2.output.texi  test_conf_parser.c.texi  test_conf_parser_ov2.c.texi  test_multiple_parsers.c.texi  testdata  version_gengetopt.texi
build_dir/host/gengetopt-2.23/gl/: Makefile  Makefile.in  libgnu.la  string.h  unistd.h
build_dir/host/gengetopt-2.23/src/: Makefile  Makefile.am  Makefile.in  acceptedvalues.lo  argsdef.lo  cmdline.c  cmdline.ggo  cmdline.h  cmdline.lo  fileutils.lo  gengetopt.cc  ggos.lo  gm.cc  gm.h  gm.lo  gm_utils.lo  libgengetopt.la  parser.cc  parser.h  scanner.cc  scanner.ll  yyerror.lo
build_dir/host/gengetopt-2.23/src/.deps/: acceptedvalues.Plo  argsdef.Plo  cmdline.Plo  fileutils.Plo  gengetopt.Po  ggos.Plo  globals.Plo  gm.Plo  gm_utils.Plo  parser.Plo  scanner.Plo  yyerror.Plo
build_dir/host/gengetopt-2.23/src/.libs/: libgengetopt.la
build_dir/host/gengetopt-2.23/src/skels/: Makefile  Makefile.am  Makefile.in  c_source.cc  c_source.h  c_source.h_skel  c_source.lo  check_modes.cc  check_modes.h  check_modes.lo  clear_arg.cc  clear_arg.h  clear_arg.lo  clear_given.lo  copyright.lo  custom_getopt_gen.cc  custom_getopt_gen.h  custom_getopt_gen.lo  dependant_option.cc  dependant_option.h  dependant_option.lo  enum_decl.lo  exit_failure.lo  file_save.lo  file_save_multiple.cc  file_save_multiple.h  file_save_multiple.lo  free_list.lo  free_multiple.cc  free_multiple.h  free_multiple.lo  free_string.cc  free_string.h  free_string.lo  generic_option.lo  given_field.lo  group_counter.cc  group_counter.h  group_counter.lo  group_option.cc  (+23 more)
build_dir/host/gengetopt-2.23/src/skels/.deps/: c_source.Plo  check_modes.Plo  clear_arg.Plo  clear_given.Plo  copyright.Plo  custom_getopt_gen.Plo  dependant_option.Plo  enum_decl.Plo  exit_failure.Plo  file_save.Plo  file_save_multiple.Plo  free_list.Plo  free_multiple.Plo  free_string.Plo  generic_option.Plo  given_field.Plo  group_counter.Plo  group_option.Plo  handle_help.Plo  handle_version.Plo  header.Plo  init_args_info.Plo  multiple_fill_array.Plo  multiple_opt_list.Plo  option_arg.Plo  print_help_string.Plo  required_option.Plo  reset_group.Plo  update_given.Plo
build_dir/host/gengetopt-2.23/src/tests/: Makefile  Makefile.am  Makefile.in
build_dir/host/gengetopt-2.23/tests/: Makefile  Makefile.am  Makefile.in  more_than_once.sh  more_than_once.sh.in  no_optgiven.sh  no_optgiven.sh.in  no_prog_name.c  no_unnamed.c  no_unnamed_cmd.ggonu  test.output  test_all_opts.sh  test_all_opts.sh.in  test_all_opts_file_save.sh  test_all_opts_file_save.sh.in  test_conf.conf  test_conf_inc.conf  test_conf_parser.sh  test_conf_parser.sh.in  test_conf_parser_err.sh  test_conf_parser_err.sh.in  test_conf_parser_err_string.sh  test_conf_parser_err_string.sh.in  test_conf_parser_grp.sh  test_conf_parser_grp.sh.in  test_conf_parser_ov.sh  test_conf_parser_ov.sh.in  test_conf_parser_ov2.c  test_conf_parser_ov2.sh  test_conf_parser_ov2.sh.in  test_conf_parser_ov3.c  test_conf_parser_ov3.sh  test_conf_parser_ov3.sh.in  test_conf_parser_ov4.c  test_conf_parser_ov4.sh  test_conf_parser_ov4.sh.in  test_conf_parser_save.sh  test_conf_parser_save.sh.in  test_default_values.sh  test_default_values.sh.in  (+45 more)
dl/: 1905daemon-3e3f1a46.tar.bz2  8021xd-39121978.tar.bz2  ated_ext-c78699ee.tar.bz2  bndstrg_plus-8350508d.tar.bz2  datconf-6bb733f7.tar.bz2  dl  fwdd-a4613268.tar.bz2  libmapd-a02db301.tar.bz2  log4cplus-2.0.5.tar.xz  mapd-5c07fae4.tar.bz2  mapfilter-1e65759b.tar.bz2  miniupnpd-1.6-7f64a95d.tar.bz2  mt7981_conninfra_20220425-bbf588.tar.xz  mtfwd-7a74da03.tar.bz2  ngrokc-20170922.tar.bz2  sigma_daemon-6fda8379.tar.bz2  sigma_dut-236e7ac2.tar.bz2  wappd-60bcf478.tar.bz2  warp_20220425-d15d0a.tar.xz
scripts/: cfe-partition-tag.py  cfe-wfi-tag.py  checkpatch.pl  combined-ext-image.sh  combined-image.sh  config.guess  config.sub  diffconfig.sh  dl_cleanup.py  dl_github_archive.py  download.pl  dump-target-info.pl  env  ext-toolchain.sh  gen_image_generic.sh  get_source_date_epoch.sh  getver.sh  ipkg-build  ipkg-make-index.sh  json_add_image_info.py  json_overview_image_info.py  linksys-image.sh  metadata.pm  mkhash.c  mkits.sh  om-fwupgradecfg-gen.sh  package-metadata.pl  pad_image  patch-kernel.sh  qemustart  rstrip.sh  sercomm-payload.py  sign_images.sh  size_compare.sh  slugimage.pl  target-metadata.pl  ubinize-image.sh
tmp/: .config  .config-feeds.in  .diffconfig.stage1  .diffconfig.stage2  .kconfig-apm821xx  .kconfig-apm821xx_nand  .kconfig-apm821xx_sata  .kconfig-arc770  .kconfig-archs38  .kconfig-armvirt  .kconfig-armvirt_32  .kconfig-armvirt_64  .kconfig-at91  .kconfig-at91_sam9x  .kconfig-at91_sama5  .kconfig-ath25  .kconfig-ath79  .kconfig-ath79_generic  .kconfig-ath79_mikrotik  .kconfig-ath79_nand  .kconfig-ath79_tiny  .kconfig-bcm27xx_bcm2708  .kconfig-bcm27xx_bcm2709  .kconfig-bcm27xx_bcm2710  .kconfig-bcm27xx_bcm2711  .kconfig-bcm47xx  .kconfig-bcm47xx_legacy  .kconfig-bcm47xx_mips74k  .kconfig-bcm4908  .kconfig-bcm53xx  .kconfig-bcm63xx  .kconfig-bcm63xx_smp  .kconfig-gemini  .kconfig-imx6  .kconfig-ipq40xx  .kconfig-ipq40xx_mikrotik  .kconfig-ipq806x  .kconfig-kirkwood  .kconfig-lantiq  (+58 more)
(+17403 files in other folders)
